# Niche-Claude-Code

./: .gitignore  LICENSE  NOTICE  README.md
skills/agent-reach/: README.md  SKILL.md
skills/production-grade-scaffold/templates/python-fastapi/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/production-grade-scaffold/templates/python-fastapi/.github/workflows/: ci.yml
skills/production-grade-scaffold/templates/python-fastapi/app/api/: server.py
skills/production-grade-scaffold/templates/python-fastapi/app/data_access/repositories/: README.md
skills/production-grade-scaffold/templates/python-fastapi/app/data_access/unit_of_work/: README.md
skills/production-grade-scaffold/templates/python-fastapi/app/database/migrations/: README.md
skills/production-grade-scaffold/templates/python-fastapi/app/domain/: README.md
skills/production-grade-scaffold/templates/python-fastapi/infra/: README.md
skills/production-grade-scaffold/templates/rust-axum/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
skills/production-grade-scaffold/templates/rust-axum/.github/workflows/: ci.yml
skills/production-grade-scaffold/templates/rust-axum/migrations/: README.md
skills/production-grade-scaffold/templates/rust-axum/src/: main.rs
skills/production-grade-scaffold/templates/rust-axum/src/api/middleware/: README.md
skills/production-grade-scaffold/templates/rust-axum/src/data_access/repositories/: README.md
skills/production-grade-scaffold/templates/rust-axum/src/domain/: README.md
(+195 files in other folders)
